# cringe

./: Cargo.toml
src/: main.rs
